@@ -17,6 +17,8 @@ Added
   extracted into files after upload
 - resource.upload_dir to upload an entire directory to a resource, the directory
   will be added into the resources so that e.g. directory/a.txt becomes resource/a.txt
+- redirection detections, if the server has moved and is being redirected (e.g. using 
+  a 302 or 301 response), xnatpy will detect that and use the new url instead.
 
 0.3.8 - 2018-06-04
 ------------------
